WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230493
Prevent test from accessing FP registers if they are not available (e.g., arm softFP)
https://bugs.webkit.org/show_bug.cgi?id=230493
Summary
Prevent test from accessing FP registers if they are not available (e.g., arm...
Mikhail R. Gadelha
Reported
2021-09-20 11:48:37 PDT
Prevent test from accessing FP registers if they are not available (e.g., arm softFP)
Attachments
Patch
(1.71 KB, patch)
2021-09-20 11:53 PDT
,
Mikhail R. Gadelha
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mikhail R. Gadelha
Comment 1
2021-09-20 11:53:46 PDT
Created
attachment 438706
[details]
Patch
EWS
Comment 2
2021-09-21 02:23:04 PDT
Committed
r282808
(
241940@main
): <
https://commits.webkit.org/241940@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 438706
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-09-21 02:24:17 PDT
<
rdar://problem/83344800
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug