Prevent test from accessing FP registers if they are not available (e.g., arm softFP) https://bugs.webkit.org/show_bug.cgi?id=230493

Unreviewed gardening.

The patch from https://bugs.webkit.org/show_bug.cgi?id=228543 introduced
explicity calls to FP registers, however, they are not available in archs
that emulate FPs. This patch adds an #ifdef to only enable the test if
the arch has FP registers.

Patch by Mikhail R. Gadelha <mikhail@igalia.com> on 2021-09-21

* assembler/testmasm.cpp:
(JSC::testStoreBaseIndex):

Canonical link: https://commits.webkit.org/241940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282808 268f45cc-cd09-0410-ab3c-d52691b4dbfc