Source/JavaScriptCore/assembler/testmasm.cpp
@@ -5413,6 +5413,7 @@ void testStoreBaseIndex()
         CHECK_EQ(array[4], UINT8_MAX - 42);
     }
 
+#if CPU(ARM_HARDFP)
     // storeDouble
     {
         auto test = compile([=](CCallHelpers& jit) {
@@ -5460,6 +5461,7 @@ void testStoreBaseIndex()
         invoke<void>(test, array, static_cast<UCPURegister>(3), 42.0f);
         CHECK_EQ(array[4], 42.0f);
     }
+#endif
 }
 
 static void testCagePreservesPACFailureBit()
